Added new classes and updated logic

--- a/quizapp/src/main/resources/application.properties
+++ b/quizapp/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=quizapp
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/questiondb
+
+spring.datasource.username=postgres
+spring.datasource.password=GHtu149#3%
+spring.jpa.hibernate.ddl=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
